# Ti-Value

./: Linux deployment instructions of TV wallet  Linux deployment instructions of TV wallet.txt  TV Exchange Documents.doc  The White Paper of Ti-blockchain1.0.docx  Ti-Value build description.doc  fc.7z  libs_win_x64.7z  vendor.7z  vs2013项目属性页配置信息.txt
Compiled TV wallet and API/: API.xlsx
TV wallet source/Command to generate header files of rpc_stubs and common_api/: Command to generate header files of rpc_stubs and common_api.txt  contract_api.json  script_api.json  tiv_api_generator.exe——1
TV wallet source/Command to generate header files of rpc_stubs and common_api/rpc_stubs/: CommonApiRpcClient.cpp
TV wallet source/Command to generate header files of rpc_stubs and common_api/rpc_stubs/include/rpc_stubs/: CommonApiOverrides.ipp  CommonApiRpcServer.hpp
TV wallet source/Environment and configuration information/: Compile remarks.txt  Configuration information of vs2013 project properties page.txt  db_leveldb.7z
TV wallet source/Generate genesis_json.cpp file/: Command to generate genesis_json.cpp files.txt
TV wallet source/Initialized proxy account and wifi keys in this code/: keys.json
TV wallet source/grbit/: GRBit.cbp  GRBit.sln  GRBit.vcxproj  GRBit.vcxproj.filters  main.cpp  packages.config
TV wallet source/grbit/libraries/: .gitignore  CMakeLists.txt
TV wallet source/grbit/libraries/api/: CMakeLists.txt
TV wallet source/grbit/libraries/blockchain/: GenesisJson.cpp  PendingChainState.cpp  StorageTypes.cpp
TV wallet source/grbit/libraries/client/: CMakeLists.txt  Notifier.cpp
TV wallet source/grbit/libraries/db/: UpgradeLeveldb.cpp
TV wallet source/grbit/libraries/glua/: README.md  lparsercombinator.cpp  lthinkyounglib.cpp  ltypechecker.cpp  lvm.cpp  thinkyoung_lua_api.cpp  thinkyoung_lua_lib.cpp  tichain_lua_lib.cpp  tichainlib.cpp
TV wallet source/grbit/libraries/glua/single_glua_src/: thinkyoung_lua_api.demo.cpp  tichain_lua_api.demo.cpp  tichain_lua_api.demo.h
TV wallet source/grbit/libraries/glua/tests_lua/: test_load_contract.lua
TV wallet source/grbit/libraries/glua/tests_typed/: test_market.lua  test_storage.glua
TV wallet source/grbit/libraries/include/api/: CommonApi.hpp
TV wallet source/grbit/libraries/include/blockchain/: GluaChainApi.hpp
TV wallet source/grbit/libraries/rpc_stubs/: CommonApiRpcServer.cpp
TV wallet source/grbit/libraries/wallet/: TransactionLedgerExperimental.cpp  WalletDb.cpp
demo/: TV LINUX 搭建.docx  TV Linux building .docx
demo/php/: tvSocket.php
grbit/: GRBit.WK3  GRBit__.vcxproj  abc  goopal.mk  grbit.workspace
grbit/libraries/blockchain/: ChainDatabase.cpp  ChainInterface.cpp  GenesisJson_test.cpp  Operations.cpp
grbit/libraries/glua/: glua_state_scope.cpp  lauxlib.cpp  ljsonlib.cpp  lundump.cpp
grbit/libraries/glua/tests_lua/: test1.lua  test_c_function.lua  test_c_module_inject.lua  test_error.lua  test_exit_contract.lua  test_for_loop_goto.lua  test_stop_vm.lua
grbit/libraries/glua/tests_typed/: test_typed_exit_contract.glua
grbit/libraries/include/api/: CommonApi.hpp
grbit/libraries/include/blockchain/: GluaChainApi.hpp  Operations.hpp  PendingChainState.hpp
grbit/libraries/include/client/: Client.hpp  ClientImpl.hpp  Notifier.hpp
grbit/libraries/include/glua/: tichain_lua_api.h
grbit/libraries/include/net/: ChainServerCommands.hpp
grbit/libraries/include/rpc_stubs/: CommonApiClient.hpp
grbit/libraries/rpc/: RpcServer.cpp
grbit/libraries/rpc_stubs/: CommonApiClient.cpp
grbit/libraries/wallet/: TransactionBuilder.cpp  TransactionLedger.cpp  Wallet.cpp  WalletDb.cpp
rpc/: rpc_server.cpp
tichain/: tichain.pro
tichain/libraries/include/blockchain/: FileStoreEntry.hpp
tichain/libraries/rpc_stubs/: CommonApiClient.cpp
tv_src/: tichain.pro
tv_src/fc/include/fc/: safe.hpp
tv_src/libraries/blockchain/: ContractOperations.cpp  FileStoreEntry.cpp
tv_src/libraries/include/blockchain/: GenesisJson.hpp
tv_src/libraries/rpc/: RpcServer.cpp
tv_src/libraries/rpc_stubs/: CommonApiRpcClient.cpp
tv_src/libraries/wallet/: Wallet.cpp  WalletDb.cpp
产生genesis_json.cpp文件/: keys.json  产生genesis_json.cpp文件命令.txt
产生genesis_json.cpp文件/备份/: bts_genesis_to_bin.cpp
产生rpc_stubs和common_api头文件的命令/: api_parse_compare.py  blockchain_api.json  debug_api.json  general_api.json  network_api.json  tichain_api.json  types.json  wallet_api.json
产生rpc_stubs和common_api头文件的命令/rpc_stubs/: CommonApiRpcServer.cpp
环境及配置信息/: 编译说明.txt
该版代码所初始化的代理账号及wif keys/bac/: genesis_json.cpp  init_genesis.json
钱包源码/grbit/: CMakeLists.txt  Makefile  abcde  pack_gpc.cpp
钱包源码/grbit/libraries/blockchain/: ChainDatabase.cpp  ContractOperations.cpp  FileStoreEntry.cpp  FileStoreOperations.cpp  GenesisJson_test.cpp  PendingChainState.cpp  Transaction.cpp  genesis_bts.json  tichain_lua_api.cpp
钱包源码/grbit/libraries/client/: BlockchainApi.cpp  Client.cpp  TichainApi.cpp  WalletApi.cpp
钱包源码/grbit/libraries/glua/: tichain_lua_lib.cpp
钱包源码/grbit/libraries/include/blockchain/: ChainDatabase.hpp  ChainDatabaseImpl.hpp  ChainInterface.hpp  Config.hpp  Exceptions.hpp  FileStoreEntry.hpp  FileStoreOperations.hpp  Transaction.hpp  Types.hpp
钱包源码/grbit/libraries/include/glua/: thinkyoung_lua_api.h  thinkyoung_lua_lib.h  tichain_lua_lib.h
钱包源码/grbit/libraries/include/rpc_stubs/: CommonApiOverrides.ipp  CommonApiRpcClient.hpp
钱包源码/grbit/libraries/include/wallet/: Wallet.hpp  WalletDb.hpp  WalletEntrys.hpp  WalletImpl.hpp
钱包源码/grbit/libraries/net/: Upnp.cpp
钱包源码/grbit/libraries/rpc_stubs/: CommonApiClient.cpp  CommonApiRpcClient.cpp  CommonApiRpcServer.cpp
钱包源码/grbit/libraries/utilities/: git_revision.cpp.in
钱包源码/grbit/libraries/wallet/: TransactionLedger.cpp.rej  TransactionLedgerExperimental.cpp  Wallet.cpp
钱包源码/产生genesis_json.cpp文件/: genesis_json.cpp  init_genesis.json  wif_keys.json
钱包源码/产生rpc_stubs和common_api头文件的命令/: NetworkApi.cpp  delegate_api.json  types.jsonbak  产生rpc stubs 和common_api头文件的命令.txt
钱包源码/该版代码所初始化的代理账号及wif keys/bac/: wif_keys.json
(+17 files in other folders)
